[package]
name = "rocksdb-piper-node"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi4"] }
napi-derive = "2.16.0"
rocksdb = { version = "0.21.0", features = ["zstd"] }
serde_json = "1.0" # <-- ADD THIS LINE

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"